		Changed menus 14, 7.n.6, 10.1 and 8.4.
		Changed default charset for new mailgroups and message areas
		to CP437.
		Added setup for filefind keyword length in menu 13.
		Added setup items in menu 1.5 for child priority and filesystem
		sync calls.

	mbuseradd:
		Fixed removing of a OS created homedir. This may solve problems
		on RH and Fedora (under test).

	examples:
		Updated English, German, Spanish and Dutch macro files:
		html.nodes and filemgr.status.

	lang:
		removed obsolete prompt 240.
		Updated germandu.txt (by Malte Tychsen).


v0.51.1		21-Feb-2004 - 06-Mar-2004

	upgrade:
		In all message groups set check/set default character set.
		In all message areas set the character set to use with the
		global editor (to CP437 for example). Local and netmail
		areas must be done by hand because they are most likely not
		in a group.
		The macro templates are updated, you MUST install the newfiles
		macro template at least because the format changed!
		Type "make help" in the examples subdirectory to see how.

	SETUP.sh:
		Changed to support Darwin (OS X). Note that in earlier days
		mbse did compile under OS X, but things are different since
		then. Work is underway to let it compile and run again.
	
	libmbse.a:
		Changed the execute function so it will work on 2.6.x kernels
		and fast cpu's.
		Added execute_str function for compatibility with the older
		api. Added execute_pth function to execute programs in the
		path.
	
	mbout:
		Replaced system() call with execute.

	mbsetup:
		In edit message groups added setup for default character set.
		In edit message areas added setup for character set for the
		area. Also added global edit for character set.
		In several places where groups need to be tagged, there is now
		a switch (*) to select/deselect all groups at once.
		In the user editor the sex is now changed with the spacebar to
		prevent typing errors.
		In the user editor added character set edit in the second
		screen.