@@ -42,9 +42,42 @@
 #include <sys/wait.h>
 #include <sys/param.h>
 #include <syslog.h>
+#include <time.h>
 
 #include "mbuseradd.h"
 
+
+/*
+ * Milliseconds timer, returns 0 on success.
+ */
+int msleep(int msecs)
+{
+    int             rc;
+    struct timespec req, rem;
+
+    rem.tv_sec = 0;
+    rem.tv_nsec = 0;
+    req.tv_sec = msecs / 1000;
+    req.tv_nsec = (msecs % 1000) * 1000000;
+
+    while (1) {
+	rc = nanosleep(&req, &rem);
+	if (rc == 0)
+	    break;
+	if ((errno == EINVAL) || (errno == EFAULT))
+	    break;
+
+	/*
+	 * Error was EINTR, run timer again to complete.
+	 */
+	req.tv_sec = rem.tv_sec;
+	req.tv_nsec = rem.tv_nsec;
+	rem.tv_sec = 0;
+	rem.tv_nsec = 0;
+    }
+
+    return rc;
+}
 
 
 
@@ -65,6 +98,7 @@ int execute(char **args, char *in, char *out, char *err)
     fflush(stderr);
 
     if ((pid = fork()) == 0) {
+	msleep(150);
 	if (in) {
 	    close(0);
 	    if (open(in, O_RDONLY) != 0) {
